--- a/css/hyperaudio.player.css
+++ b/css/hyperaudio.player.css
@@ -152,8 +152,10 @@
 }
 
 .hyperaudio-player-bar {
+	position: relative;
 	width: 60%;
 	background-color: rgba(0,0,0,0.5);
+	cursor:ew-resize;
 }
 
 .hyperaudio-player-progress {
@@ -161,4 +163,37 @@
 	width: 1%;
 	background: #2c3e50;
 	border-right: 1px solid #000;
+}
+
+.hyperaudio-player-current-time,
+.hyperaudio-player-duration {
+	position:absolute;
+	top:0;
+	height:48px;
+	width:100%;
+	font-size:16px;
+	line-height:48px;
+	font-weight:normal;
+	padding:0;
+	font-family:'Varela Round', 'helvetica neue', arial, sans-serif;
+	color:#fff;
+}
+.hyperaudio-player-current-time {
+	padding-left:2%;
+}
+.hyperaudio-player-duration {
+	padding-right:2%;
+	text-align:right;
+}
+
+.hyperaudio-projector {
+	position:absolute;
+	top:0;
+	left:-9999px;
+	width:100%;
+	height:100%;
+}
+
+.hyperaudio-projector.active {
+	left:0;
 }
